force-app/main/default/objects/Contact/fields/mkto71_Original_Search_Phrase__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Search_Phrase__c</fullName>
    <description>Used by Marketo</description>
    <label>Original Search Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>