force-app/main/default/objects/Contact/fields/mkto71_Original_Source_Info__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Source_Info__c</fullName>
    <description>Used by Marketo</description>
    <label>Original Source Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>