force-app/main/default/objects/Contact/fields/Mobile_Phone_for_SMS__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_for_SMS__c</fullName>
    <formula>Phone</formula>
    <label>Mobile Phone for SMS</label>
    <type>Text</type>
</CustomField>