force-app/main/default/objects/Contact/fields/n2de__DE_Status__c.field-meta.xml
<CustomField>
    <fullName>n2de__DE_Status__c</fullName>
    <externalId>true</externalId>
    <label>DE Classifier Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>