force-app/main/default/objects/Contact/fields/n2de__Distribution_engine_details__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_engine_details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Engine details</label>
    <referenceTo>n2de__Distribution_engine_details__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>