force-app/main/default/objects/Contact/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>used with marketo for surveys</description>
    <label>NPS Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>