force-app/main/default/objects/Contact/fields/NPS_Survey_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey_Send_Date__c</fullName>
    <description>Used to create list views which are used for mass email. This date is imported based on the report: NPS Survey - Weekly Report.</description>
    <label>NPS Survey Send Date</label>
    <type>Date</type>
</CustomField>