force-app/main/default/objects/Contact/fields/Number_of_Orders_for_Dr__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders_for_Dr__c</fullName>
    <description>Sum of orders placed per doctor</description>
    <inlineHelpText>Sum of orders placed per doctor</inlineHelpText>
    <label>Number of Orders for Dr</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>