force-app/main/default/objects/Contact/fields/Number_of_Orders_for_Dr_Last_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders_for_Dr_Last_180_Days__c</fullName>
    <label>Number of Orders for Dr - Last 180 Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>