force-app/main/default/objects/Contact/fields/Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Email__c</fullName>
    <formula>Opportunity__r.Owner.Email</formula>
    <label>Opportunity Owner Email</label>
    <type>Text</type>
</CustomField>