force-app/main/default/objects/Contact/fields/Opportunity_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Last_Name__c</fullName>
    <formula>Opportunity__r.Owner.LastName</formula>
    <label>Opportunity Owner Last Name</label>
    <type>Text</type>
</CustomField>