force-app/main/default/objects/Contact/fields/Opportunity_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Phone__c</fullName>
    <description>Used with Playbooks to send Info Guide email, temporary while Marketo open rates are problematic.</description>
    <formula>Opportunity__r.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Phone</label>
    <type>Text</type>
</CustomField>