force-app/main/default/objects/Contact/fields/Opportunity_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Payment_Plan__c</fullName>
    <formula>text(Opportunity__r.Payment_Plans__c)</formula>
    <label>Opportunity Payment Plan</label>
    <type>Text</type>
</CustomField>