force-app/main/default/objects/Contact/fields/Owner_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Reassignment__c</fullName>
    <description>Used to reassign owner. Sync with Account owner, which is reassigned via Distribution Engine.</description>
    <formula>text(Account.Owner_Reassignment__c)</formula>
    <label>Owner Reassignment</label>
    <type>Text</type>
</CustomField>