force-app/main/default/objects/Contact/fields/PA_ID__c.field-meta.xml
<CustomField>
    <fullName>PA_ID__c</fullName>
    <formula>Portal_Authentication__r.Id</formula>
    <inlineHelpText>LU on the Portal Authentication Page, used for import of old orders for portal authentication. can be deleted</inlineHelpText>
    <label>PA ID</label>
    <type>Text</type>
</CustomField>