force-app/main/default/objects/Contact/fields/Parent_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Type__c</fullName>
    <defaultValue>&quot;Couple&quot;</defaultValue>
    <label>Parent Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>