force-app/main/default/objects/Contact/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <formula>if ( Owner.Profile.Name = &quot;Outside Sales&quot;, &quot;month&quot;, 
if ( Owner.Profile.Name = &quot;Outreach Program&quot;, &quot;quarter&quot;, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Schedule</label>
    <type>Text</type>
</CustomField>