force-app/main/default/objects/Contact/fields/PC_Comparing_Banks__c.field-meta.xml
<CustomField>
    <fullName>PC_Comparing_Banks__c</fullName>
    <label>PC- Comparing Banks</label>
    <length>40</length>
    <type>Text</type>
</CustomField>