force-app/main/default/objects/Contact/fields/PC_Storage_Payment__c.field-meta.xml
<CustomField>
    <fullName>PC_Storage_Payment__c</fullName>
    <label>PC - Storage Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Pre-pay</fullName>
            </value>
            <value>
                <fullName>One-time payment</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>