force-app/main/default/objects/Contact/fields/Portal_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Portal_Authentication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Authentication</label>
    <referenceTo>Portal_Authentication__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>