force-app/main/default/objects/Contact/fields/Portal_Authentication_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_Authentication_ID__c</fullName>
    <description>Used in workflow when contact is updated and email matches an existing PA</description>
    <formula>Portal_Authentication__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Authentication ID</label>
    <type>Text</type>
</CustomField>