force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Doula</fullName>
            </value>
            <value>
                <fullName>Family Practitioner</fullName>
            </value>
            <value>
                <fullName>Founder_CEO</fullName>
                <label>Founder CEO</label>
            </value>
            <value>
                <fullName>General Practitioner</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Medical Assistant</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Pregnancy Coordinator</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>Surrogate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>