force-app/main/default/objects/Contact/fields/Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>Practice_Name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Name</label>
    <type>Text</type>
</CustomField>