force-app/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to select the primary contact at Health Care Providers, used for Fax merge fields, when send from Accounts.</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>