force-app/main/default/objects/Contact/fields/Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>Pronunciation__c</fullName>
    <label>Pronunciation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>