force-app/main/default/objects/Contact/fields/PT_2_0_Stipend__c.field-meta.xml
<CustomField>
    <fullName>PT_2_0_Stipend__c</fullName>
    <label>PT 2.0 Stipend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>125</fullName>
                <isActive>false</isActive>
                <label>125</label>
            </value>
            <value>
                <fullName>150</fullName>
                <isActive>false</isActive>
                <label>150</label>
            </value>
            <value>
                <fullName>175</fullName>
                <isActive>false</isActive>
                <label>175</label>
            </value>
            <value>
                <fullName>250</fullName>
                <isActive>false</isActive>
                <label>250</label>
            </value>
            <value>
                <fullName>450</fullName>
                <isActive>false</isActive>
                <label>450</label>
            </value>
            <value>
                <fullName>50</fullName>
                <isActive>false</isActive>
                <label>50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>