force-app/main/default/objects/Contact/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <description>Used for FedEx Shipping Label by Outreach Program</description>
    <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Owner</label>
    <type>Text</type>
</CustomField>