force-app/main/default/objects/Contact/fields/Record_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner_Email__c</fullName>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Owner Email</label>
    <type>Text</type>
</CustomField>