force-app/main/default/objects/Contact/fields/Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Referral_Code__c</fullName>
    <description>This is a code that is particular to the referrer and referral project.</description>
    <inlineHelpText>This is a code that is particular to the referrer and referral project.</inlineHelpText>
    <label>Referral Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>