force-app/main/default/objects/Contact/fields/Referred_by_Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Number_of_Orders__c</fullName>
    <formula>Referring_Contact__r.Account.Number_of_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred by Number of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>