force-app/main/default/objects/Contact/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referrer</label>
    <type>Checkbox</type>
</CustomField>