force-app/main/default/objects/Contact/fields/Referring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Contact (new)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Clients that are part of the same account cannot refer themselves.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>notEqual</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Referring Contact New)</relationshipLabel>
    <relationshipName>Referred_By</relationshipName>
    <type>Lookup</type>
</CustomField>