force-app/main/default/objects/Contact/fields/Referring_Contact_new_ID__c.field-meta.xml
<CustomField>
    <fullName>Referring_Contact_new_ID__c</fullName>
    <formula>Referring_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Contact (new) ID</label>
    <type>Text</type>
</CustomField>