force-app/main/default/objects/Contact/fields/referring_referrer_flag__c.field-meta.xml
<CustomField>
    <fullName>referring_referrer_flag__c</fullName>
    <description>Formula field to bring in Referrer &quot;Referrer&quot; flag on the Referred contact record.</description>
    <formula>Referring_Contact__r.Referrer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Referrer Flag</label>
    <type>Checkbox</type>
</CustomField>