force-app/main/default/objects/Contact/fields/Retired_Left__c.field-meta.xml
<CustomField>
    <fullName>Retired_Left__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Outreach Program to indicate when a Doctor is retired or an office staff has left the company.</description>
    <label>Retired/Left</label>
    <type>Checkbox</type>
</CustomField>