force-app/main/default/objects/Contact/fields/Section_Term_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Section_Term_Cookie__c</fullName>
    <label>Section / Term (Cookie)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>