force-app/main/default/objects/Contact/fields/Section_Term_LT__c.field-meta.xml
<CustomField>
    <fullName>Section_Term_LT__c</fullName>
    <description>Used by Marketing Dept / Marketo</description>
    <label>Section / Term (LT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>