force-app/main/default/objects/Contact/fields/Sender_City__c.field-meta.xml
<CustomField>
    <fullName>Sender_City__c</fullName>
    <defaultValue>&quot;Warren&quot;</defaultValue>
    <description>used to populate Zenkraft FedEx record with sender address, we use Jennifer Dziedzic&apos;s address so packages are returned to her and can be reshipped.</description>
    <label>Sender City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>