force-app/main/default/objects/Contact/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <defaultValue>&quot;Jennifer Dziedzic&quot;</defaultValue>
    <description>used to populate Zenkraft FedEx record with sender address, we use Jennifer Dziedzic&apos;s address so packages are returned to her and can be reshipped.</description>
    <label>Sender Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>