force-app/main/default/objects/Contact/fields/Sender_State__c.field-meta.xml
<CustomField>
    <fullName>Sender_State__c</fullName>
    <defaultValue>&quot;OH&quot;</defaultValue>
    <description>used to populate Zenkraft FedEx record with sender address, we use Jennifer Dziedzic&apos;s address so packages are returned to her and can be reshipped.</description>
    <label>Sender State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>