force-app/main/default/objects/Contact/fields/Sender_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Sender_Street_Address__c</fullName>
    <defaultValue>&quot;817 Comstock NW&quot;</defaultValue>
    <description>used to populate Zenkraft FedEx record with sender address, we use Jennifer Dziedzic&apos;s address so packages are returned to her and can be reshipped.</description>
    <label>Sender Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>