force-app/main/default/objects/Contact/fields/Sender_Zip__c.field-meta.xml
<CustomField>
    <fullName>Sender_Zip__c</fullName>
    <defaultValue>&quot;44483&quot;</defaultValue>
    <description>used to populate Zenkraft FedEx record with sender address, we use Jennifer Dziedzic&apos;s address so packages are returned to her and can be reshipped.</description>
    <label>Sender Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>