force-app/main/default/objects/Contact/fields/Shipping_Preference__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Preference__c</fullName>
    <defaultValue>&quot;ShipmatePreference-0002&quot;</defaultValue>
    <label>Shipping Preference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>