force-app/main/default/objects/Contact/fields/Source_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Source_Cookie__c</fullName>
    <label>Source (Cookie)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>