force-app/main/default/objects/Contact/fields/Source_FT__c.field-meta.xml
<CustomField>
    <fullName>Source_FT__c</fullName>
    <description>Used by Marketing Dept / Marketo</description>
    <label>Source (FT)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>