force-app/main/default/objects/Contact/fields/Source_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead_ID__c</fullName>
    <label>Source Lead ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>