force-app/main/default/objects/Contact/fields/Source_LT__c.field-meta.xml
<CustomField>
    <fullName>Source_LT__c</fullName>
    <label>Source (LT)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>