force-app/main/default/objects/Contact/fields/Sync_with_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether record syncs with Marketo</description>
    <label>Sync with Marketo</label>
    <type>Checkbox</type>
</CustomField>