force-app/main/default/objects/Contact/fields/tdc_tsw__result__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__result__c</fullName>
    <label>result</label>
    <length>100</length>
    <type>Text</type>
</CustomField>