force-app/main/default/objects/Contact/fields/tdc_tvte__Empty__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Empty__c</fullName>
    <formula>IF(tdc_tvte__success__c == true, 

CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, &apos;Verified&apos;, 

&apos;undeliverable&apos;, &apos;Verified&apos;, 

&apos;risky&apos;, &apos;Verified&apos;, 

&apos;unknown&apos;, &apos;Verified&apos;, tdc_tvte__Result__c) 

, &apos;Not Verified&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Legend</label>
    <type>Text</type>
</CustomField>