force-app/main/default/objects/Contact/fields/tdc_tvte__Result_text__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Result_text__c</fullName>
    <formula>IF(tdc_tvte__success__c == true,  

CASE(tdc_tvte__Result__c, &apos;deliverable&apos;,  &apos;Deliverable&apos;, 

&apos;undeliverable&apos;,  &apos;Non-Deliverable&apos;, 

&apos;risky&apos;,  &apos;Risky&apos;, 

&apos;unknown&apos;,  &apos;Unknown&apos;, tdc_tvte__Result__c) 

, &apos;Not Verified Yet&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Legend</label>
    <type>Text</type>
</CustomField>